[package]
name = "ink_runtime"
version = "6.0.0-beta.1"
authors = ["Use Ink <ink@use.ink>", "Cardinal Cryptography"]
edition.workspace = true
license.workspace = true
description = "Runtime environment for ink! e2e tests"
repository.workspace = true
documentation = "https://docs.rs/ink_runtime"
homepage.workspace = true

[dependencies]
sha3 = "0.10.8"
frame-metadata = { workspace = true }
frame-system = { workspace = true }
frame-support = { workspace = true }
pallet-assets = { workspace = true }
pallet-assets-precompiles = { workspace = true }
pallet-balances = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-revive = { workspace = true }
pallet-timestamp = { workspace = true }
scale = { workspace = true }
sp-core = { workspace = true, default-features = false }
sp-externalities = { workspace = true }
sp-runtime = { workspace = true, default-features = false }
sp-io = { workspace = true }

ink_primitives = { workspace = true }
ink_revive_types = { workspace = true }
ink = { path = "../ink" }
ink_env = { workspace = true, default-features = true }
ink_e2e = { path = "../e2e" }
ink_e2e_macro = { workspace = true, default-features = true }

jsonrpsee = { workspace = true, features = ["ws-client"] }
thiserror = { workspace = true }
paste = { workspace = true }
scale-info = { workspace = true }
subxt-metadata = { workspace = true }

[features]
default = [
    # This is required for the runtime-interface to work properly in the std env.
    "std",
]
std = [
	"frame-support/std",
	"frame-system/std",
	"frame-metadata/std",
	"ink_primitives/std",
	"ink_revive_types/std",
	"pallet-assets/std",
	"pallet-assets-precompiles/std",
	"pallet-balances/std",
	"pallet-transaction-payment/std",
	"pallet-revive/std",
	"pallet-timestamp/std",
	"scale/std",
	"scale-info/std",
	"sp-core/std",
	"sp-externalities/std",
	"sp-io/std",
	"ink_e2e_macro/std",
	"sp-runtime/std"
]
